#227 aligned nickname correctly

--- a/src/scss/views/_leaderboard.scss
+++ b/src/scss/views/_leaderboard.scss
@@ -8,6 +8,10 @@
         font-size: 22px;
     }
 
+    .nickname {
+        padding-left: 5.5em;
+    }
+
     h1 {
         margin-bottom: 40px;
     }
